--- a/assets/css/mediaqueries.css
+++ b/assets/css/mediaqueries.css
@@ -1,5 +1,21 @@
-@media only screen and (max-device-width: 768px){
-       
-    
-    
+@media (max-width: 768px){
+       #mobile-nav{
+       		display: auto;
+       }
+
+    	.content-circle{
+    		min-width: 50%;
+    	}
+
+    	nav{
+    		padding: 10px;
+    		margin: 0 auto;
+    		min-width: 480px;
+    	}
+
+    	li a{
+    		margin-left: 30px;
+    		margin-right: 30px;
+    		font-size: 1.5em;
+    	}
 }
