--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,24 +31,6 @@ body {
 header{
     background-color: #F4E7DD;
     text-align: center;
-    margin-top: 45px;
-}
-
-#mobile-nav{
-	width: 100%;
-	height: 45px;
-	overflow: hidden;
-	margin: 0;
-	background-color: #34302D;
-    position: fixed;
-    top: 0;
-    z-index: 2;
-}
-
-.panel {
-    position: fixed;
-    left: -15.625em; /*left or right and the width of your navigation panel*/
-    width: 15.625em; /*should match the above value*/
 }
 
 .wrap { 
@@ -58,10 +40,13 @@ header{
 }
 
 #logo{
-    width: 600px;
-    height: 300px;
+    width: 1000px;
+    height: 450px;
     margin: 0 auto;
+    background-image: url('../img/logo.png');
+    background-repeat: no-repeat;
 }
+
 footer{
     background-color: #BE3B3B;
     margin: 0;
@@ -88,6 +73,7 @@ h3{
     font-family: "Contrail One";
 }
 
+/* nav */
 ul{
     padding: 0;
     margin: 0;
@@ -109,11 +95,57 @@ li a{
 }
 
 nav{
-    min-width: 750px;
     margin: 0 auto;
     text-align: center;
     background-color: #5B7A8C;
     padding: 0;
+}
+
+#mobile-nav{
+	width: 100%;
+	height: 45px;
+	overflow: hidden;
+	margin: 0;
+	background-color: #34302D;
+    position: fixed;
+    top: 0;
+    z-index: 2;
+    display: none;
+}
+
+.menu-link{
+    text-decoration: none;
+    color: #FFFFFF;
+    padding: 7px;
+    text-align: center;
+    vertical-align: top;
+    background-color: #5B7A8C;
+    opacity: 0.4;
+    position: relative;
+    top: 10px;
+    left: 7px;
+    border-radius: 10px;
+    transition: 0.2s ease;
+}
+
+.menu-link:hover{
+    opacity: 1;
+}
+
+.panel {
+    position: fixed;
+    background-color: #34302D;
+    left: 8em;
+    display: none;
+}
+
+.panel ul{
+    width: 50px;
+}
+
+.panel ul li a{
+    display: block;
+    margin: 50px 0px 0 10px;
 }
 
 /* main content */
@@ -163,7 +195,7 @@ nav{
 
 #submit{
     border: none;
-    border-radius: 10%;
+    border-radius: 10px;
     background-color: #34302D;
     transition: color 0.3s, background-color 0.3s;
 }
@@ -185,4 +217,5 @@ nav{
 #result, #pass-fail{
     margin-top: 10px;
 }
+
 
