--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    -webkit-font-smoothing: anitaliased;
+    -webkit-font-smoothing: antialiased;
     color: #FFFFFF;
     font-family: "Contrail One";
 }
@@ -50,11 +50,12 @@ header{
 footer{
     background-color: #BE3B3B;
     margin: 0;
-    padding: 0;
+    padding: 10px;
 }
 
 footer > p{
     text-align: left;
+    margin: 0;
 }
 
 div{
@@ -128,6 +129,12 @@ nav{
     transition: 0.2s ease;
 }
 
+.menu-link img{
+    width: 30px;
+    position: relative;
+    bottom: 5px;
+}
+
 .menu-link:hover{
     opacity: 1;
 }
@@ -150,10 +157,6 @@ nav{
 
 /* main content */
 
-.container{
-    width: 1200px;
-}
-
 .main-sections{
     padding: 15px;
     text-align: center;
@@ -166,13 +169,14 @@ nav{
 
 .content-circle{
     text-align: center;
-    min-width: 33%; /* dont know if this is considered harmful */
+    max-width: 33%; /* dont know if this is considered harmful */
     display: inline-block;
     margin: 0 auto;
 }
 
 .content-circle h3{
     font-size: 2em;
+    width: auto;
 }
 
 .first{
@@ -217,5 +221,82 @@ nav{
 #result, #pass-fail{
     margin-top: 10px;
 }
+
+/* tutorial styles */
+
+.drag-container{
+    width: 1200px;
+    height: 600px;
+    margin: 0 auto;
+}
+
+.dropzone {
+    background-color: #ccc;
+    border: dashed 3px transparent;
+    border-radius: 4px;
+    margin: 10px auto 30px;
+    width: 80%;
+    transition: background-color 0.3s, border-color 0.3s;
+}
+
+.drop-active {
+  border-color: #666;
+}
+
+.drop-target {
+  background-color: #29e;
+}
+
+.drag-drop{
+  display: inline-block;
+  -webkit-transform: translate(0px, 0px);
+          transform: translate(0px, 0px);
+  transition: background-color 0.3s, border 0.3s;
+}
+
+.draggable{
+    z-index: 2000;
+}
+
+.drag-drop.can-drop { 
+    background-color: #4e4; 
+}
+
+/* circuits tutorial */
+#battery{
+    background: url('../img/battery.png') no-repeat;
+    height: 95px;
+    width: 208px;
+}
+
+#wire-left{
+    background-image: url('../img/copperwire-left.png');
+    width: 120px;
+    height: 235px;
+}
+
+#wire-right{
+    background-image: url('../img/copperwire-right.png');
+    width: 121px;
+    height: 231px;
+}
+
+#lightbulb-circuits{
+    background: url('../img/lightbulb-off.png') no-repeat;
+    width: 158px;
+    height: 218px;
+    position: relative;
+    float: right;
+    margin-right: 350px;
+}
+
+.battery-drop{
+    height: 95px;
+    width: 208px;
+    position: relative;
+    top: 420px;
+    left: 425px;
+}
+
 
 
