--- a/assets/css/mediaqueries.css
+++ b/assets/css/mediaqueries.css
@@ -1,6 +1,7 @@
 @media (max-width: 768px){
     .content-circle{
         min-width: 50%;
+        padding: 15px;
     }
 
     .top-nav{
@@ -37,3 +38,13 @@
         font-size: 1.8em;
     }
     
+    .slidr{
+        height: 300px;
+        width: 300px;
+    }
+    
+    .img-responsive{
+        height: 95%;
+        width: 95%;
+    }
+}
